--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3309
+DB_HOST=host.docker.internal
+DB_PORT=3310
 DB_DATABASE=quizapp
 DB_USERNAME=admin
 DB_PASSWORD=root
